[tool.poetry]
name = "tnt-serials"
version = "0.1.0"
description = ""
authors = ["Derzhak31 <derzhak31@gmail.com>"]
readme = "README.md"
packages = [{include = "tnt_serials"}]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.1"
lxml = "^4.9.1"
beautifulsoup4 = "^4.11.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
